--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                     </div>
                 </div>
             </div>
+            <hr />
+            <div class="text-right">
+                <a href="https://github.com/bracketdash/yre">View this project on GitHub</a>
+            </div>
         </div>
         <script src="https://unpkg.com/vue"></script>
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
