--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p class="mb-4"><strong>Recommendation</strong>: {{recommendation}}</p>
                         <div class="row">
                             <div class="col">
-                                <p class="mb-4"><strong>Chance of higher score</strong>: {{weightedRerollComboRating}}%</p>
+                                <p class="mb-4"><strong>Chance of equal/higher score</strong>: {{weightedRerollComboRating}}%</p>
                             </div>
                             <div class="col">
                                 <button class="btn btn-sm btn-success" @click="followRecommendation">Follow Recommendation</button>
