--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
                     <div v-show="!showResults">
                         <p v-html="noResultsMsg">Loading...</p>
                     </div>
+                    <div v-show="rerollsSimulated > 0" style="display:none">
+                        <p><strong>Re-Rolls Simulated</strong>: {{rerollsSimulated}} / 14207 ({{((rerollsSimulated/14207)*100).toFixed(2)}}%)</p>
+                    </div>
                     <div v-show="showResults" style="display:none">
                         <p class="mb-4"><strong>Recommendation</strong>: {{recommendation}}</p>
                         <div class="row">
                             <div class="col">
-                                <p class="mb-4"><strong>Odds of equal/higher score</strong>: {{weightedRerollComboRating}}%</p>
+                                <p class="mb-4"><strong>Re-Roll Confidence</strong>: {{weightedRerollComboRating}}%</p>
                             </div>
                             <div class="col">
                                 <button class="btn btn-sm btn-success" @click="followRecommendation">Follow Recommendation</button>
