--- a/index.html
+++ b/index.html
@@ -1,133 +1,87 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YRE: Yahtzee Recommendation Engine</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    <meta charset="utf8" />
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1"
     />
+    <title>Yhatzee Companion</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="app" class="container">
-      <h1
-        class="
-          display-4
-          p-3
-          mb-3
-          text-center
-          border border-top-0 border-left-0 border-right-0
-        "
-      >
-        YRE: Yahtzee Recommendation Engine
-      </h1>
-      <div class="row">
-        <div class="col border border-bottom-0 border-left-0 border-top-0">
-          <div class="form-group">
-            <label>Dice</label>
-            <input
-              type="text"
-              class="form-control"
-              v-model="dice"
-              @keydown="showResults = false"
-              @keyup.enter="makeRecommendation"
-              maxlength="5"
-            />
-          </div>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                v-model="rollsLeft"
-                @change="showResults = false"
-              />
-              <span>I have rolls left</span>
-            </label>
-          </div>
-          <hr />
-          <p>Combinations already used:</p>
-          <div class="form-check" v-for="pointCombo in pointCombos">
-            <label class="form-check-label">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                v-model="pointCombo.used"
-                @change="showResults = false"
-              />
-              <span v-html="pointCombo.name"></span>
-            </label>
-          </div>
-          <div class="row mt-3">
-            <div class="col">
-              <button class="btn btn-primary" @click="makeRecommendation">
-                Calculate Recommendation
-              </button>
-            </div>
-            <div class="col">
-              <button class="btn btn-default" @click="newRoll">
-                New Roll &amp; Rec
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div v-show="!showResults">
-            <p v-html="noResultsMsg">Loading...</p>
-          </div>
-          <div v-show="rerollsSimulated > 0" style="display: none">
-            <p>
-              <strong>Re-Rolls Simulated</strong>: {{rerollsSimulated}} / 7676
-              ({{((rerollsSimulated/7676)*100).toFixed(2)}}%)
-            </p>
-          </div>
-          <div v-show="showResults" style="display: none">
-            <p class="mb-4">
-              <strong>Recommendation</strong>: {{recommendation}}
-            </p>
-            <div class="row">
-              <div class="col">
-                <p class="mb-4">
-                  <strong>Re-Roll Confidence</strong>:
-                  {{weightedRerollComboRating}}%
-                </p>
-              </div>
-              <div class="col">
-                <button
-                  class="btn btn-sm btn-success"
-                  @click="followRecommendation"
-                >
-                  Follow Recommendation
-                </button>
-              </div>
-            </div>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Current Roll Combos</th>
-                  <th class="text-right">Points</th>
-                  <th class="text-right">Max</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr v-for="availablePointCombo in availablePointCombos">
-                  <td>{{availablePointCombo.name}}</td>
-                  <td class="text-right">{{availablePointCombo.points}}</td>
-                  <td class="text-right">{{availablePointCombo.max}}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+    <div id="app">
+      <div class="header">
+        <h1>Yhatzee Companion</h1>
       </div>
-      <hr />
-      <div class="text-right">
-        <a href="https://github.com/bracketdash/yre"
-          >View this project on GitHub</a
-        >
+      <label>Dice</label>
+      <input
+        type="text"
+        v-model="dice"
+        @keydown="showResults = false"
+        @keyup.enter="makeRecommendation"
+        maxlength="5"
+      />
+      <label>
+        <input
+          type="checkbox"
+          v-model="rollsLeft"
+          @change="showResults = false"
+        />
+        <span>I have rolls left</span>
+      </label>
+      <p>Combinations already used:</p>
+      <label v-for="pointCombo in pointCombos">
+        <input
+          type="checkbox"
+          v-model="pointCombo.used"
+          @change="showResults = false"
+        />
+        <span v-html="pointCombo.name"></span>
+      </label>
+      <button @click="makeRecommendation">Calculate Recommendation</button>
+      <button @click="newRoll">New Roll &amp; Rec</button>
+      <div v-show="!showResults">
+        <p v-html="noResultsMsg">Loading...</p>
+      </div>
+      <div v-show="rerollsSimulated > 0" style="display: none">
+        <p>
+          <strong>Re-Rolls Simulated</strong>: {{rerollsSimulated}} / 7676
+          ({{((rerollsSimulated/7676)*100).toFixed(2)}}%)
+        </p>
+      </div>
+      <div v-show="showResults" style="display: none">
+        <p><strong>Recommendation</strong>: {{recommendation}}</p>
+        <div class="row">
+          <div class="col">
+            <p>
+              <strong>Re-Roll Confidence</strong>:
+              {{weightedRerollComboRating}}%
+            </p>
+          </div>
+          <div class="col">
+            <button @click="followRecommendation">Follow Recommendation</button>
+          </div>
+        </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Current Roll Combos</th>
+              <th>Points</th>
+              <th>Max</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="availablePointCombo in availablePointCombos">
+              <td>{{availablePointCombo.name}}</td>
+              <td>{{availablePointCombo.points}}</td>
+              <td>{{availablePointCombo.max}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
+    <script src="companion.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
