--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf8" />
-    <meta
-      name="viewport"
-      content="width=device-width,minimum-scale=1,initial-scale=1"
-    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Yhatzee Companion</title>
     <link rel="stylesheet" href="styles.css" />
+    <meta name="theme-color" content="#369" />
   </head>
   <body>
-    <div id="app">
+    <main class="app-container">
       <div class="header">
         <h1>Yhatzee Companion</h1>
       </div>
@@ -80,7 +78,7 @@
           </tbody>
         </table>
       </div>
-    </div>
+    </main>
     <script src="companion.js"></script>
     <script src="app.js"></script>
   </body>
