--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Yhatzee Companion</h1>
       </div>
       <div class="container">
-        <h2>Current roll:</h2>
+        <h2>Current roll</h2>
         <div class="dice">
           <input type="text" placeholder="?" />
           <input type="text" placeholder="?" />
@@ -21,27 +21,27 @@
           <input type="text" placeholder="?" />
           <input type="text" placeholder="?" />
         </div>
-        <h2>Combos already used:</h2>
+        <h2>Combos already used</h2>
         <div class="used"></div>
-        <h2>Recommendation:</h2>
-        <p id="recommendation"></p>
-        <h2>Re-Roll confidence:</h2>
-        <p id="rerollConfidece"></p>
-        <h2>Your combos:</h2>
-        <table class="combos-table">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Points</th>
-              <th>Max</th>
-            </tr>
-          </thead>
-          <tbody id="combos"></tbody>
-        </table>
+        <h2>AI suggestion</h2>
+        <p class="suggestion no-suggestion">
+          Enter your dice above for an AI suggestion.
+        </p>
+        <div class="your-combos hidden">
+          <table>
+            <thead>
+              <tr>
+                <th>COMBO</th>
+                <th>POINTS</th>
+                <th>MAX</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
       </div>
     </main>
     <script src="companion.js"></script>
-    <script src="navigation.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
